(fix) download btn render on mobile.

--- a/client/src/styles/endgameStats.scss
+++ b/client/src/styles/endgameStats.scss
@@ -13,7 +13,7 @@ $word-wrong-color: #DADADA;
     justify-content: space-between;
 }
 #download-margin {
-    margin-top: 8vh;
+    margin-top: 11vh;
     // left: 0;
     // right: 0;
     // top: 20%;
